<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mukin</string>
    <string name="instagram_login">인스타그램으로 로그인하기</string>
    <string name="facebook_login">페이스북으로 로그인하기</string>
    <string name="facebook_talk_email_check" >페이스북계정 이메일을 확인해주세요</string>
    <string name="of_sign_in_using_email">or Sign in using Email</string>
    <string name="kakao_talk">Kakao Talk</string>
    <string name="kakao_talk_email_check" >카카오계정 이메일을 확인해주세요</string>
    <string name="sign_in_with">SIGN IN WITH</string>
    <string name="no_account_yet">No account yet? </string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="alread_have_account">Already have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="name_hint">Nick name</string>
    <string name="create_new_account">CREATE A NEW ACCOUNT</string>
    <string name="search_hint">Search song by name, artist, numbers</string>
    <string name="newsongs">NEW</string>
    <string name="top_hits">TOP</string>
    <string name="genre">GENRE</string>
    <string name="favorites">FAVORITE</string>
    <string name="artists">ARTISTS</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="sing">SING</string>
    <string name="free">FREE</string>
    <string name="songs">Songs</string>
    <string name="search">Search</string>
    <string name="works_best_with_headphone">Works best with headphones</string>
    <string name="mic_not_working">Record mic function is not working.</string>
    <string name="play_hit_button">Push the play button to Play</string>
    <string name="effects">Effects</string>
    <string name="tempo">Tempo</string>
    <string name="pitch">Pitch</string>
    <string name="mode">Mode</string>
    <string name="choose_an_effect">Choose an effect</string>
    <string name="close">CLOSE</string>
    <string name="none">None</string>
    <string name="echo">Echo</string>
    <string name="reverb">Reverv</string>
    <string name="delay">Delay</string>
    <string name="adjust_tempo">Adjust Tempo</string>
    <string name="select_a_mode">Select a Mode</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="finish">Finish</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="re_record">Re-Record</string>
    <string name="share">Share</string>
    <string name="share_on">Share on</string>
    <string name="link_to_your_music">Link to your music</string>
    <string name="share_and_fun">SHARE THE FUN WITH YOUR FRIENDS</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="messenger">Messenger</string>
    <string name="copy_link">Copy Link</string>
    <string name="more">More</string>
    <string name="adjust_pitch">Adjust Pitch</string>
    <string name="recording">Recording…</string>
    <string name="paused">Paused</string>
    <string name="deactivated_user_message">You have been deactivated by the admin</string>
    <string name="email_blank_error">Email cannot be blank</string>
    <string name="password_blank_error">Password cannot be blank</string>
    <string name="nick_name_blank_error">Nick name cannot be blank</string>
    <string name="empty_genre_message">Genre list is empty</string>
    <string name="session_expired_error">Please login</string>
    <string name="session_expired_update">Please wait update.</string>
    <string name="empty_artist_message">No artist found</string>
    <string name="empty_songs_message">No songs found</string>
    <string name="song_not_playable">Song is not playable</string>
    <string name="link_copied_to_clipboard">Link is copied to clipboard</string>
    <string name="the_app_not_found">The app you are looking for is not installed</string>
    <string name="common_api_error">Something went wrong. Please try again later</string>
    <string name="email_already_exists">Email already exists. Please try different one</string>
    <string name="invalid_credential">Invalid credentials</string>
    <string name="type_your_desired_search">Type your desired search</string>
    <string name="upload_error">Song couldn\'t be uploaded. Please retry.</string>
    <string name="file_not_found">Song file could not be found</string>
    <string name="file_obb_not_found">패키지 파일을 찾을 수 없습니다.</string>
    <string name="file_lib_not_found">라이브 파일을 찾을 수 없습니다.</string>
    <string name="file_obb_lib_error">패키지/라이브 찾을 수 없습니다..</string>
    <string name="please_install_again">삭제후 재설치해 주시기 바랍니다.</string>
    <string name="loading">Loading…</string>
    <string name="fetching_file">Fetching song…</string>
    <string name="fetching_lyrics">Fetching lyrics…</string>
    <string name="reading_lyrics">Reading lyrics…</string>
    <string name="processing_lyrics">Processing lyrics…</string>
    <string name="tap_once_for_exit">Tap once more to exit</string>
    <string name="do_you_want_to_logout">Do you want to Logout?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="get_ready">GET READY</string>
    <string name="do_you_want_to_stop_recording">Do you want to stop recording?</string>
    <string name="do_you_want_to_discard_recording">Do you want to discard recording?</string>
    <string name="share_with">Share with</string>
    <string name="saving_song">Song is getting saved…</string>
    <string name="sharing_song">Sharing Song…</string>
    <string name="email_not_valid_error">Email is not valid</string>
    <string name="please_continue_with_facebook_login">Please continue with facebook login</string>
    <string name="song_file_could_not_shared">Song file could not be shared</string>
    <string name="songs_found">SONGS FOUND</string>
    <string name="song_found">SONG FOUND</string>
    <string name="song">Song</string>
    <string name="hit">Hit</string>
    <string name="hits">Hits</string>
    <string name="password_eight_character">Password should be minimum 8 characters</string>
    <string name="mic_insert">Basic microphones may cause noise.\nIt is recommended that you use a microphone.</string>
    <string name="tempo_default">default</string>
    <string name="pitch_default">default</string>
    <!--<string name="mukin_bluetooth_mic_device_name">KY Mukin K200</string>-->
    <string name="error_headset_eject">The wired headset has been disconnected.\nThe recording function is supported only when using a wired headset.</string>
    <string name="error_record_support">The recording function is supported only when using a wired headset.</string>
    <string name="error_miceffect_support">The mic effect function is supported only when using a wired headset.</string>
    <string name="playing">Playing</string>
    <string name="confirm">Confirm</string>
    <string name="logo_bottom_text_01">Best sound quality, best karaoke Keumyoung Karaoke</string>
    <string name="logo_bottom_text_02">Copyright © 2018 Kyentertainment</string>
    <string name="do_you_want_to_stop_playing">Do you want to stop playing?</string>
    <string name="function_not_support">This feature is not currently supported.</string>
    <string name="upload">Upload</string>
    <string name="interlude_jump">점프</string>
    <string name="interlude_play">(간주중)</string>
    <string name="reserve">예약</string>
    <string name="reserve_song">예약곡</string>
    <string name="reserve_next">다음곡</string>
    <string name="reserve_play">시작</string>
    <string name="reserve_please">목록을 선택해 예약해주세요.</string>
    <string name="in_playing_work">재생시사용합니다.</string>
</resources>
