<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signup_section"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <FrameLayout
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/logo_02" />
            </FrameLayout>

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:typeface="sans" />

            <FrameLayout
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_button_bg"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:typeface="sans" />

            </FrameLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1.0" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0" />

                <kr.keumyoung.mukin.util.KakaoLoginButton
                    android:id="@+id/kakao_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:visibility="visible" />

                <FrameLayout
                    android:id="@+id/facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/fb_button"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/fb_social_login_icon"
                        android:drawablePadding="8dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="16dp"
                        android:text="@string/facebook_login"
                        android:textColor="@android:color/white"
                        android:typeface="sans" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/instagram_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/instagram_login_button"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/instagram_login_icon"
                        android:drawablePadding="8dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="16dp"
                        android:text="@string/instagram_login"
                        android:textColor="@android:color/white"
                        android:typeface="sans" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/signup_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_yet"
            android:textColor="@color/text_color"
            android:typeface="sans" />

        <TextView
            android:id="@+id/signup_anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup"
            android:textColor="@color/colorAccent"
            android:typeface="sans" />
    </LinearLayout>

</RelativeLayout>