<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/social_login_txt">

    <android.support.v7.widget.CardView
        android:id="@+id/alternative_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/primary_button_bg"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/of_sign_in_using_email"
            android:textColor="@android:color/white"
            android:typeface="sans" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/social_login_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/alternative_sign_in_button"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <!--<com.kakao.widget.LoginButton-->
        <!--android:id="@+id/kakao_button"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_marginRight="12dp"/>-->

        <kr.keumyoung.mukin.util.KakaoLoginButton
            android:id="@+id/kakao_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/facebook_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fb_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/fb_social_login_icon"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/facebook"
                android:textColor="@android:color/white"
                android:typeface="sans" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/social_login_section"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in_with"
        android:textColor="@color/sub_text_color" />

</RelativeLayout>