<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_img"
    android:paddingTop="24dp">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.andexert.library.RippleView
            android:id="@+id/back_button_ripple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_centered="true"
            app:rv_color="@android:color/black"
            app:rv_rippleDuration="100">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/back_icon" />
        </com.andexert.library.RippleView>

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/share"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:typeface="sans"
            android:visibility="visible" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/white">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/share_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layoutAnimation="@anim/layout_animation_fall_down" />

        <TextView
            android:id="@+id/share_on_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/share_recycler"
            android:layout_marginLeft="16dp"
            android:text="@string/share_on"
            android:typeface="sans"
            android:textColor="@color/sub_text_color"
            android:textSize="12sp" />

        <com.andexert.library.RippleView
            android:id="@+id/music_link_ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/share_on_label"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            app:rv_centered="false"
            app:rv_color="@android:color/black"
            app:rv_rippleDuration="100">

            <TextView
                android:id="@+id/music_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:padding="12dp"
                android:typeface="sans"
                android:text="www.mukin.kr/user/exampleurl.html"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </com.andexert.library.RippleView>

        <TextView
            android:id="@+id/link_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/music_link_ripple"
            android:layout_marginLeft="16dp"
            android:text="@string/link_to_your_music"
            android:typeface="sans"
            android:textColor="@color/sub_text_color"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/link_label">

            <LinearLayout
                android:id="@+id/badge_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/badge_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="sans"
                    android:text="@string/share_and_fun"
                    android:textColor="@color/text_color" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>